Think I fixed a weird scrolling bug on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,7 +49,7 @@ footer {
 }
 
 .SportsDataProject {
-  height: 90.5vh; /* Adjust height as needed */
+  height: 100vh; /* Adjust height as needed */
 }
 
 .pitchingLineups {
